Change theme of Colab

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaM+vVpw/jYL5rF4FN9glR",
+      "authorship_tag": "ABX9TyOnQoUjiFHx2+L1g6LizZJW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -60,13 +60,13 @@
           "height": 203
         },
         "id": "kA30xmOUNK77",
-        "outputId": "811d1208-7396-404e-fa9d-c128d77470ae"
+        "outputId": "9a3c2f43-039c-4935-f2df-85a5c0732888"
       },
       "source": [
         "datadf = pd.read_csv(\"data.csv\")\n",
         "display(datadf.head())"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -179,13 +179,13 @@
           "height": 203
         },
         "id": "oc0hfG06NWQ3",
-        "outputId": "855f18de-cd58-4bb4-ecf1-69c8f0230373"
+        "outputId": "ca33fdad-663e-46c5-a540-b9d31774aaff"
       },
       "source": [
         "datadf.rename(columns={\"Unnamed: 0\":\"Time\"},inplace=True)\n",
         "display(datadf.head())"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -311,12 +311,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rl0rnjSxSLw5",
-        "outputId": "008f965a-8003-498c-a395-21d2e10e23cd"
+        "outputId": "6af3146d-1008-4a3a-efd9-052a3e3ea6ab"
       },
       "source": [
         "print(datadf.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,13 +380,13 @@
           "height": 234
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "7157c22d-d345-4331-d9ec-1453e65d281d"
+        "outputId": "e11f585d-1112-4c70-cb79-80958c4d0ed7"
       },
       "source": [
         "outagedf=datadf.set_index(\"Time\",inplace=False)\n",
         "display(outagedf.head())"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -542,7 +542,7 @@
         "    day_outages[i[:3]]+=1\n",
         "    hour_outages[str(int(i[11:13]))+\":00\"]+=1"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -553,14 +553,14 @@
           "height": 805
         },
         "id": "XLz8X0OLadTG",
-        "outputId": "22843021-7a21-467b-c8d5-d57c783f733e"
+        "outputId": "6a54891d-c8e5-4cf5-de73-202ef318f360"
       },
       "source": [
         "hour_outagedf=pd.DataFrame({\"Count\":hour_outages}).sort_values([\"Count\"],ascending=0)\n",
         "print(\"Number of outages in each hour:\")\n",
         "display(hour_outagedf)"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +737,7 @@
           "height": 346
         },
         "id": "LB_7lVN3arOs",
-        "outputId": "99388956-5017-4416-a73a-f082f009c206"
+        "outputId": "9f813614-6cdd-40f9-f570-96604ebe8525"
       },
       "source": [
         "keys=hour_outages.keys()\n",
@@ -750,7 +750,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -784,14 +784,14 @@
           "height": 282
         },
         "id": "z8Il_zKrbHWN",
-        "outputId": "e89d723c-74c3-4d0c-d5ca-9afd76526d64"
+        "outputId": "042d1fa4-6d22-4eea-ba16-3bd0f7817e39"
       },
       "source": [
-        "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages})\n",
+        "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages}).sort_values([\"Count of Days\"],ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "display(day_outagedf)"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,16 +827,24 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
+              "      <th>Tue</th>\n",
+              "      <td>198</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Sat</th>\n",
+              "      <td>175</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Wed</th>\n",
+              "      <td>154</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>Fri</th>\n",
               "      <td>109</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Mon</th>\n",
               "      <td>46</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sat</th>\n",
-              "      <td>175</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Sun</th>\n",
@@ -846,27 +854,19 @@
               "      <th>Thu</th>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Tue</th>\n",
-              "      <td>198</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Wed</th>\n",
-              "      <td>154</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
               "     Count of Days\n",
+              "Tue            198\n",
+              "Sat            175\n",
+              "Wed            154\n",
               "Fri            109\n",
               "Mon             46\n",
-              "Sat            175\n",
               "Sun              6\n",
-              "Thu              0\n",
-              "Tue            198\n",
-              "Wed            154"
+              "Thu              0"
             ]
           },
           "metadata": {
@@ -883,7 +883,7 @@
           "height": 364
         },
         "id": "-iN-0_JAbPgs",
-        "outputId": "2a09d214-cf6e-4924-caea-991c3f6c59db"
+        "outputId": "9c10a32e-e543-4498-af74-bc72a44752de"
       },
       "source": [
         "keys=day_outages.keys()\n",
@@ -896,7 +896,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -930,7 +930,7 @@
           "height": 743
         },
         "id": "99QuTW4AbsMw",
-        "outputId": "46edeee4-f131-4452-ff7f-8f04d04eebe8"
+        "outputId": "8f1ebde5-c79a-4fd3-9b16-1667e14622b6"
       },
       "source": [
         "connections=pd.DataFrame({\"Connections\":servers})\n",
@@ -938,7 +938,7 @@
         "print(\"Connections each server made:\")\n",
         "display(connections)"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1123,7 +1123,7 @@
           "height": 417
         },
         "id": "rgldax80dig4",
-        "outputId": "be0f2260-c9dd-4f32-e7ae-a9881fc9eab8"
+        "outputId": "a453512c-0146-4d15-b6cd-cdbf83fa76f4"
       },
       "source": [
         "df=datadf.copy()\n",
@@ -1131,7 +1131,7 @@
         "df.insert (1,\"Hour\",[row[11:13]+\":00\" for row in df[\"Time\"]])\n",
         "display(df)"
       ],
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1349,7 +1349,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1360,12 +1360,12 @@
           "height": 295
         },
         "id": "6o6w89f9ea1e",
-        "outputId": "c475c0d0-f69b-4451-da38-a09b39da69cd"
+        "outputId": "114de919-2c93-40fe-bdcf-b4723cd14fb9"
       },
       "source": [
         "display(daydf)"
       ],
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1491,7 +1491,7 @@
       "source": [
         "daydf_analyse=pd.DataFrame({\"Minimum on\":daydf.idxmin(),\"Min Value\":daydf.min(),\"Maximum on\":daydf.idxmax(),\"Max Value\":daydf.max()})"
       ],
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1502,12 +1502,12 @@
           "height": 203
         },
         "id": "U52SDFSxepx1",
-        "outputId": "cc3816ba-709c-4209-cd87-d3aec1e56fc9"
+        "outputId": "318ee400-84b1-4068-968a-6eb212a37720"
       },
       "source": [
         "display(daydf_analyse)"
       ],
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1654,7 +1654,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1665,12 +1665,12 @@
           "height": 819
         },
         "id": "oDltLElvfHq8",
-        "outputId": "ef3b74ff-9223-43fc-d25a-720fbceb0c67"
+        "outputId": "387d1dc1-6813-434d-e0f5-358018b1716d"
       },
       "source": [
         "display(hourdf)"
       ],
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1949,7 +1949,7 @@
       "source": [
         "hourdf_analyse=pd.DataFrame({\"Minimum at\":hourdf.idxmin(),\"Min Value\":hourdf.min(),\"Maximum at\":hourdf.idxmax(),\"Max Value\":hourdf.max()})"
       ],
-      "execution_count": 24,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1960,12 +1960,12 @@
           "height": 203
         },
         "id": "pcSMcYg3fo9-",
-        "outputId": "9e3bb6e1-d63c-4c2c-d595-7e818b45c648"
+        "outputId": "3b422ca1-31ce-4832-9490-59166870656c"
       },
       "source": [
         "display(hourdf_analyse)"
       ],
-      "execution_count": 25,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2107,12 +2107,12 @@
           "height": 417
         },
         "id": "cTKG60SdgJOh",
-        "outputId": "8e947888-893e-481a-8bac-dcef360f4b0e"
+        "outputId": "b49b6e3e-5560-4cce-ce0c-e6f555204d74"
       },
       "source": [
         "display(df)"
       ],
-      "execution_count": 26,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2316,7 +2316,7 @@
       "source": [
         "analysedf=df.set_index(\"Hour\",inplace=False)"
       ],
-      "execution_count": 27,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -2327,12 +2327,12 @@
           "height": 447
         },
         "id": "wMPzFAJPgiwY",
-        "outputId": "5b48a5bf-78a9-4cae-f50c-715e8d919119"
+        "outputId": "2dcad6bf-37f3-450c-98e2-19b604d5f1d5"
       },
       "source": [
         "display(analysedf)"
       ],
-      "execution_count": 28,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2541,7 +2541,7 @@
         "  \"Upload\":[\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
         " \"Packet Loss\":[\"min\",\"idxmin\",\"max\",\"idxmax\"]})"
       ],
-      "execution_count": 29,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -2555,7 +2555,7 @@
         "    \"idxmax\":\"Hour\"\n",
         "})"
       ],
-      "execution_count": 30,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -2566,12 +2566,12 @@
           "height": 326
         },
         "id": "5K5DLo69g2IC",
-        "outputId": "8cd22232-183c-4992-b13c-137c0e346670"
+        "outputId": "32d8a66c-0fbb-4c1e-8606-41fa42697aab"
       },
       "source": [
         "display(overall_df)"
       ],
-      "execution_count": 31,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2852,7 +2852,7 @@
         "  \"Upload\":[\"idxmin\",\"idxmax\"],\n",
         " \"Packet Loss\":[\"idxmin\",\"idxmax\"]})"
       ],
-      "execution_count": 32,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -2866,7 +2866,7 @@
         "    \"idxmax\":\"Max(hr)\"\n",
         "})"
       ],
-      "execution_count": 33,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -2877,12 +2877,12 @@
           "height": 326
         },
         "id": "0_-QZ8yrjIbE",
-        "outputId": "9480549a-55c6-457b-aa8f-c9a7eee1a6b3"
+        "outputId": "79eecac6-b5c7-469a-9063-9215d4eb6793"
       },
       "source": [
         "display(overall_df_small)"
       ],
-      "execution_count": 34,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
