--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/j2Njas85xEfbR4QUo4u2",
+      "authorship_tag": "ABX9TyOMAuLKkc6hFCdgV676WnFG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,9 +47,10 @@
         "import parser\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from IPython.display import display"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -57,16 +58,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 0
         },
         "id": "kA30xmOUNK77",
-        "outputId": "5b01a92f-7f6c-4e32-ecf8-e51888ae769a"
+        "outputId": "6bb61963-366b-4a27-cf5d-205c6c073847"
       },
       "source": [
         "datadf = pd.read_csv(\"data.csv\")\n",
         "display(datadf.head())"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -176,16 +177,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 0
         },
         "id": "oc0hfG06NWQ3",
-        "outputId": "847a15fd-6fd9-4ff0-aeaa-a8742c0dfbcf"
+        "outputId": "e894ad34-d726-4c07-890d-a340737d9bfc"
       },
       "source": [
         "datadf.rename(columns={\"Unnamed: 0\":\"Time\"},inplace=True)\n",
         "display(datadf.head())"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -311,12 +312,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rl0rnjSxSLw5",
-        "outputId": "be75b63f-0b3e-40f9-8e7c-c88f96a64f87"
+        "outputId": "dd96127d-4dbe-4272-bd18-f2358094ec62"
       },
       "source": [
         "print(datadf.shape)"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,13 +381,13 @@
           "height": 234
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "80ec4b8a-cf26-4180-d7d6-421cc781b56b"
+        "outputId": "c7762857-8d14-4aa3-a122-3238441cd5b4"
       },
       "source": [
         "outagedf=datadf.set_index(\"Time\",inplace=False)\n",
         "display(outagedf.head())"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -542,7 +543,7 @@
         "    day_outages[i[:3]]+=1\n",
         "    hour_outages[str(int(i[11:13]))+\":00\"]+=1"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -553,14 +554,14 @@
           "height": 805
         },
         "id": "XLz8X0OLadTG",
-        "outputId": "c97d3508-ebde-4bb0-acc4-e51e24563c26"
+        "outputId": "18e1e6df-14db-4ba1-9a94-fe1edbed2e4c"
       },
       "source": [
         "hour_outagedf=pd.DataFrame({\"Count\":hour_outages}).sort_values([\"Count\"],ascending=0)\n",
         "print(\"Number of outages in each hour:\")\n",
         "display(hour_outagedf)"
       ],
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +738,7 @@
           "height": 346
         },
         "id": "LB_7lVN3arOs",
-        "outputId": "b2af3271-ef7a-4743-d8b1-eb9034cc0535"
+        "outputId": "92d7a1d2-c3b2-40f3-ef2b-252600c55651"
       },
       "source": [
         "keys=hour_outages.keys()\n",
@@ -750,7 +751,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -784,14 +785,14 @@
           "height": 282
         },
         "id": "z8Il_zKrbHWN",
-        "outputId": "e5e12e16-2d4f-4f94-ab86-0430a3135eef"
+        "outputId": "c15eb5fd-228e-407b-fa18-31d0ac2cc2af"
       },
       "source": [
         "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages}).sort_values([\"Count of Days\"],ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "display(day_outagedf)"
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +884,7 @@
           "height": 364
         },
         "id": "-iN-0_JAbPgs",
-        "outputId": "bf89774e-903d-498d-b204-e7b5bf185093"
+        "outputId": "c29a1f59-bfc1-4529-f675-fc04705e1568"
       },
       "source": [
         "keys=day_outages.keys()\n",
@@ -896,7 +897,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -930,7 +931,7 @@
           "height": 743
         },
         "id": "99QuTW4AbsMw",
-        "outputId": "d87ddf47-81ec-452d-ff05-15c22bdda6e9"
+        "outputId": "5f4cfec5-daf6-469f-f2cc-b91c271a357f"
       },
       "source": [
         "connections=pd.DataFrame({\"Connections\":servers})\n",
@@ -938,7 +939,7 @@
         "print(\"Connections each server made:\")\n",
         "display(connections)"
       ],
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1123,7 +1124,7 @@
           "height": 0
         },
         "id": "rgldax80dig4",
-        "outputId": "c35b0fb8-6115-40de-9309-003a79781cb7"
+        "outputId": "93de2c51-2d83-40cc-e7e6-f3d7ebc2e4ad"
       },
       "source": [
         "df=datadf.copy()\n",
@@ -1131,7 +1132,7 @@
         "df.insert (1,\"Hour\",[row[11:13]+\":00\" for row in df[\"Time\"]])\n",
         "display(df)"
       ],
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1349,7 +1350,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1360,12 +1361,12 @@
           "height": 0
         },
         "id": "6o6w89f9ea1e",
-        "outputId": "09a302ff-4103-4921-ea7b-bff4e18ac3e0"
+        "outputId": "1d4d7978-869c-42f9-caab-cdf54da986dc"
       },
       "source": [
         "display(daydf)"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1491,7 +1492,7 @@
       "source": [
         "daydf_analyse=pd.DataFrame({\"Minimum on\":daydf.idxmin(),\"Maximum on\":daydf.idxmax()})"
       ],
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1502,12 +1503,12 @@
           "height": 0
         },
         "id": "U52SDFSxepx1",
-        "outputId": "6704edee-b211-4039-cadf-f5f2d8b657ad"
+        "outputId": "298159ef-289a-4d3f-ce4a-f58b21d68c4c"
       },
       "source": [
         "display(daydf_analyse)"
       ],
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1633,7 +1634,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1644,12 +1645,12 @@
           "height": 0
         },
         "id": "oDltLElvfHq8",
-        "outputId": "bff4d423-7cda-40a9-8c75-871452d2f1e0"
+        "outputId": "d6162104-9132-4799-fbbe-9f3664d31a75"
       },
       "source": [
         "display(hourdf)"
       ],
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1928,7 +1929,7 @@
       "source": [
         "hourdf_analyse=pd.DataFrame({\"Minimum at\":hourdf.idxmin(),\"Maximum at\":hourdf.idxmax()})"
       ],
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1939,12 +1940,12 @@
           "height": 0
         },
         "id": "pcSMcYg3fo9-",
-        "outputId": "c95f3abe-688b-4150-c700-4c671fe3a45d"
+        "outputId": "a91b4b9f-54ef-482c-83e5-e2867241da79"
       },
       "source": [
         "display(hourdf_analyse)"
       ],
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2062,15 +2063,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 417
+          "height": 0
         },
         "id": "cTKG60SdgJOh",
-        "outputId": "1dfb64fc-ba67-42d8-fbec-e5608a894f45"
+        "outputId": "407a022a-fec0-45d8-cca4-6dfb1b13970e"
       },
       "source": [
         "display(df)"
       ],
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2280,23 +2281,23 @@
         "   \"Packet Loss\":\"mean\"\n",
         "}).round(2)"
       ],
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "KCiq5eMmi-te",
-        "outputId": "c4e7c8db-c8e3-45b1-9291-6ab13e9c11fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 447
-        }
+          "height": 0
+        },
+        "outputId": "8b16249f-3b90-4b51-b52a-f11bd627a77b"
       },
       "source": [
         "display(analysed)"
       ],
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2466,7 +2467,7 @@
       "source": [
         "analysed.to_csv('analytics.csv', index=True)"
       ],
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -2482,23 +2483,23 @@
         "  \"Upload\":[\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
         " \"Packet Loss\":[\"min\",\"idxmin\",\"max\",\"idxmax\"]})"
       ],
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ILzvaUWFjy9_",
-        "outputId": "f67b87ef-e04e-4718-e7f5-27b1e0da4fb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 444
-        }
+          "height": 0
+        },
+        "outputId": "77971fc6-d9ee-4053-8c81-51085ba29cf8"
       },
       "source": [
         "display(overall_df)"
       ],
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2788,7 +2789,7 @@
         "  #print(overall_df2[(col,\"idxmin\")])\n",
         "  #print(analysedf2.loc[[x for x in overall_df2[col][\"idxmin\"]]].index.get_level_values(1))"
       ],
-      "execution_count": 28,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -2802,7 +2803,7 @@
         "    \"idxmax\":\"Hour (Max)\"\n",
         "})"
       ],
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -2810,15 +2811,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 343
+          "height": 0
         },
         "id": "5K5DLo69g2IC",
-        "outputId": "800905f4-6a6a-4b06-8f10-172de5e41c72"
+        "outputId": "0b4df559-235b-496b-f857-7b29127f8b4d"
       },
       "source": [
         "display(overall_df)"
       ],
-      "execution_count": 30,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3094,7 +3095,7 @@
       "source": [
         "final_df=overall_df.drop(['min', 'max'],level=1, axis=1)"
       ],
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -3102,15 +3103,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 326
+          "height": 0
         },
         "id": "0_-QZ8yrjIbE",
-        "outputId": "6a3b184a-e49b-465c-8ffa-7cfd96ac8a3d"
+        "outputId": "2e87eb3d-328b-48db-9353-c9541a27608f"
       },
       "source": [
         "display(final_df)"
       ],
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3313,17 +3314,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "rNOlFcaSL35s",
-        "outputId": "35a1d2a3-f65b-47f2-d3ac-725f6309dc5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e232dac3-10b7-43e8-b732-682eee662d3c"
       },
       "source": [
         "Min_Latency_Day=overall_df[\"Latency\",\"min\"].idxmin()\n",
         "Corresponding_hour=overall_df.loc[overall_df[\"Latency\",\"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
         "print(\"Best day and hour for low latency activities: \",Min_Latency_Day,\"and\",Corresponding_hour,\"IST.\")"
       ],
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
